# colibri

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
colibri-rust/: Cargo.toml
colibri-rust/src/: channel.rs  channel_registry.rs  cli.rs  config.rs  console.rs  context.rs  gateway.rs  hardware.rs  http.rs  lib.rs  main.rs  memory.rs  messages.rs  model.rs  permissions.rs  repl_input.rs  runtime_reload.rs  session.rs  session_history.rs  shell_policy.rs  skills.rs  steering.rs  terminal_qr.rs  tools.rs  transcript.rs  vision.rs  weixin.rs
colibri-rust/tests/: parity.rs  runtime.rs
configs/: agent.example.toml  glm.example.toml  openai.example.toml
deploy/systemd/: colibri-gateway.service  colibri-repl.service
docs/: README.md
docs/reference/: 2026-07-01-context-handoff.md  cardputerzero-summary.md  claude-code-agent-core-analysis.md
docs/superpowers/plans/: 2026-07-01-cardputer-agent-milestone-1.md  2026-07-01-colibri-milestone-1.md  2026-07-06-colibri-minimum-tool-loop.md  2026-07-06-colibri-openai-compatible-model.md  2026-07-06-colibri-permissions-transcript.md  2026-07-07-colibri-context-compacting.md  2026-07-07-colibri-file-memory-tools.md  2026-07-10-colibri-steering.md  (+14 more)
src/cardputer_agent/: cli.py  config.py  messages.py  session.py
src/colibri/: cli.py  config.py  console.py  context.py  diagnostics.py  gateway.py  gateway_logging.py  gateway_process.py  hardware.py  inbound_router.py  media.py  memory.py  messages.py  paths.py  permissions_store.py  repl_input.py  runtime_reload.py  session.py  session_history.py  skills.py  steering.py  terminal_qr.py  textutil.py  transcript.py  vision.py
tests/unit/: test_channel_permission.py  test_channels.py  test_cli.py  test_config.py  test_console.py  test_context.py  test_diagnostics.py  test_gateway_process.py  test_gateway_steering.py  test_hardware.py  test_inbound_router.py  test_memory.py  test_model_factory.py  test_openai_compatible_model.py  test_permissions.py  test_permissions_store.py  test_session.py  test_session_history.py  test_skills.py  test_steering.py  test_terminal_qr.py  test_tools.py  test_transcript.py  test_vision.py
(+74 files in other folders)
