[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "colibri"
version = "0.1.0"
description = "Lightweight Python agent runtime for CardputerZero"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
colibri = "colibri.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
