[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "colibri"
version = "0.1.0"
description = "Lightweight Python agent runtime for CardputerZero"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pycryptodome>=3.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
colibri = "colibri.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"colibri.memory_templates" = ["*.md"]
"colibri.memory_templates.topics" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
