[package]
name = "colibri-rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Colibri lightweight agent runtime"

[dependencies]
aes = "0.8"
libc = "0.2"
md5 = "0.7"
serde_json = { version = "1", features = ["preserve_order"] }
shell-words = "1"
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["tls"] }

[lib]
name = "colibri_rust"
path = "src/lib.rs"

[[bin]]
name = "colibri"
path = "src/main.rs"
